# Geometric-Algorithms

./: .gitignore  CMakeLists.txt  Readme.md  backupCMakeLists.txt  m  m.pub
saves/: b.txt  boundary_test.txt  boundingBox.txt  findingWay.txt  finding_way_2.txt  finidingVerticies.txt  hello.txt  triangulation.txt  voronoiDiagram.txt
scripts/: rebuild.sh
src/: .gitignore  .qmake.stash  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Algorithm.h  AlgorithmInterface.h  Application.cpp  Application.h  Board.cpp  Board.h  BoundingBox.cpp  BoundingBox.h  ButtonStates.h  CMakeCache.txt  CMakeLists.txt  CreativeInterface.h  DTriangulation.cpp  DTriangulation.h  Example.h  FindingVerticies.cpp  FindingVerticies.h  FindingWay.cpp  FindingWay.h  GeometryAlgorithms.sln  GeometryAlgorithms_run.pri  MainInterface.h  Makefile  Makefile.Debug  Makefile.Release  QDrawingBoard.cpp  QDrawingBoard.h  QMainInterface.cpp  QMainInterface.h  QMainInterface.ui  Strategy.cpp  Utilities.h  VoronoiDiagram.cpp  VoronoiDiagram.h  Writer.cpp  Writer.h  (+6 more)
src/Algorithms/: Board.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Field.h  FindingVerticies.cpp  FindingVerticies.h  FindingWay.cpp  GraphFindingWay.cpp  GraphFindingWay.h  Strategy.cpp  Strategy.h  Utilities.h
src/ConsoleApplication/: AlgorithmInterface.h  Application.cpp  Application.h  CMakeLists.txt  CreativeInterface.h  MainInterface.h
src/InputOutput/: CMakeLists.txt  Writer.cpp  Writer.h
src/QtApplication/: CMakeLists.txt  QDrawingBoard.cpp  QMainInterface.cpp  QMainInterface.h
src/debug/: moc_QDrawingBoard.cpp  moc_QMainInterface.cpp
src/debug/qmake/: qtvars_x64_Debug.props
src/debug/qmake/temp/: A6773093-BD7D-3694-9E2F-2D238421B802.src.designtime.idx  Makefile
src/debug/src.tlog/: moc.write.1u.tlog  src.write.1u.tlog
src/release/: moc_QDrawingBoard.cpp
src/release/qmake/: qtvars_x64_Release.props
src/release/qmake/temp/: A6773093-BD7D-3694-9E2F-2D238421B802.src.designtime.idx  Makefile
src/release/src.tlog/: moc.read.1u.tlog  moc.write.1u.tlog  src.write.1u.tlog
tst/: Board-Test.cpp  BoundingBox-Test.cpp  CMakeLists.txt  DTriangulation-test.cpp  (+4 more)
